# math

./: Cargo.toml  README.md
src/: color.rs  complex.rs  euler.rs  lib.rs  matrix.rs  multivector.rs  quaternion.rs  rectangle.rs  vector.rs
